# cuda

./: CMakeLists.txt  build.sh  matrix_sum.cu  print_thread_idx.cu  vector_add.cu
ch01/: compile_command.txt  hello.cu  memset_device_mem.cu  vec_add.cu
ch02/: check_dimension.cu  memalloc.cu
common/: common.h
pycuda/ch03/: device_query.py
